2007-11-27  Jerome Rapinat <romjerome@yahoo.fr>
	* src/TipOfDay.py: remove uneeded sax escape, issue #1368

2007-11-27 Benny Malengier <benny.malengier@gramps-project.org>
	* src/ManagedWindow.py: new call_modal method. 
				Reports tools should use that
	* src/GrampsWidgets.py: improve a text string
	* src/plugins/NarrativeWeb.py: use call_modal, trunkate long filter
				names, better placement of selector note/media
	* src/ReportBase/_BareReportDialog.py: reports are modal but not 
				transient, remove bug to make them transient!

2007-11-26 Benny Malengier <benny.malengier@gramps-project.org>
	* src/plugins/NarrativeWeb.py: new select contact-header-footer-intro
	* src/GrampsWidgets.py: widget for new select

2007-11-26 Jim Sack <jgsack@san.rr.com>
	*  src/plugins/ReadPkg.py : reverted previous change
	better to leave it broken than to risk worse

2007-11-26 Jim Sack <jgsack@san.rr.com>
	* src/plugins/ReadPkg.py : #1096 add isfile() before remove()
        Note: this may be part a larger "relative path" problem 

2007-11-25 Jim Sack <jgsack@san.rr.com>
	* src/Utils.py : add get_empty_tempdir() and rm_tempdir()
	* src/ArgHandler.py : use get_empty_tempdir, etc
	* src/test/gramps_cli_test.py : update test for new import dir
	- Note get_empty_tempdir forces location in (new) const.TEMP_DIR. 
	- Note rm_tempdir is paranoid in only removing subdirs under 
	TEMP_DIR  -- if needed callers can code shutil.rmtree themselves. 
	- Also added FIXME comment in AH - about a prior comment and 
	code change that I feel needs re-examination.

2007-11-25 Jim Sack <jgsack@san.rr.com>
	* src/gramps_main.py : remove trial code left in on last commit
	the r9407 trial code may be of interest as it demos how I avoid
	gui popups when doing CLI testing -- but I think there's probably
	a cleaner way, and maybe it also deserves a CLI option.

2007-11-25 Jim Sack <jgsack@san.rr.com>
	* src/const.py.in : add USER_xxx for more centralization
	* src/ViewManager.py : use const.USER_DOCGEN